fix nav dropdown and parallax images on ios mobiles display issues

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -637,9 +637,4 @@
   .nav-separator {
     margin: 0 4px;
   }
-
-  .dropdown-menu {
-    min-width: 200px;
-    max-width: 200px;
-  }
 }
